--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,7 +1,7 @@
 .SearchBar{
-    width:98%;
+    width:97%;
     padding:5px;
-    margin: 10px;
+    margin: 18px auto;
 }
 .nameElement{
     padding-left: 12%;
@@ -11,17 +11,28 @@
 }
 .buttonDiv{
     width: 98%;
-    border:  1.5px dashed red;
+    /* border:  1.5px dashed red; */
     height: 42px;
     display: flex;
 }
+
 .circularBtn{
     text-decoration: none;
     height: 30px;
     font-size: 16px;
     width: 30px;
     border-radius: 999px;
-    border-color: #1890ff;
+    /* border-color: black;
+    background-color: #1890ff;
+     */
+     color: gray;
+
+}
+.circularBtn:active:enabled{
+    color: black;
+    background-color: white;
+}
+.circularBtn:enabled{
     background-color: #1890ff;
     color: white;
 }
@@ -45,13 +56,14 @@
 
 table{
     width: 98%;
-    padding: 10px;
+    padding: 15px;
 }
 thead{
     padding-bottom: 10px;
 }
 thead, tbody tr td{
     text-align: left;
+    padding: 8px 0 8px 0 ;
     /* border: 1px solid black; */
 }
 .checkBoxEle{
@@ -112,3 +124,4 @@ thead, tbody tr td{
     /* border: 1px solid black; */
     margin: 9px 5px 2px 90%;
 }
+
