--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -22,17 +22,17 @@
     font-size: 16px;
     width: 30px;
     border-radius: 999px;
-    /* border-color: black;
-    background-color: #1890ff;
-     */
-     color: gray;
-
-}
-.circularBtn:active:enabled{
     color: black;
     background-color: white;
 }
-.circularBtn:enabled{
+
+
+.selectedPage{
+    text-decoration: none;
+    height: 30px;
+    font-size: 16px;
+    width: 30px;
+    border-radius: 999px;
     background-color: #1890ff;
     color: white;
 }
@@ -123,5 +123,9 @@ thead, tbody tr td{
 .crossIcon{
     /* border: 1px solid black; */
     margin: 9px 5px 2px 90%;
+}
+
+.selectedRow{
+    background-color: #fbaaf4fc;
 }
 
